--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "@ngrx/schematics": "^10.1.2",
     "@ngrx/store": "^10.1.2",
     "@ngrx/store-devtools": "^10.1.2",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "jwt-decode": "^3.1.2",
+    "ng2-google-charts": "^6.1.0",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
