--- a/package.json
+++ b/package.json
@@ -13,19 +13,26 @@
     "serve": "ionic serve",
     "ionic:build": "ionic build",
     "ionic:android": "ionic capacitor run android",
-    "lint:translate": "ngx-translate-lint"
+    "lint:translate": "ngx-translate-lint -p ./src/app/**/*.{ts,html} -l ./src/assets/i18n/*.json"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.0.5",
+    "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.0.0",
     "@angular/core": "~10.0.0",
     "@angular/forms": "~10.0.0",
+    "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
     "@capacitor/android": "^2.4.5",
     "@capacitor/core": "2.4.5",
+    "@fortawesome/angular-fontawesome": "^0.8.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -39,6 +46,7 @@
     "@ngrx/store-devtools": "^10.1.2",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "chart.js": "^2.9.4",
     "jwt-decode": "^3.1.2",
     "ng2-google-charts": "^6.1.0",
     "ngx-toastr": "^13.2.0",
@@ -65,7 +73,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ngx-translate-lint": "^1.13.0",
+    "ngx-translate-lint": "^1.14.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
