--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "chart.js": "^2.9.4",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "ng2-google-charts": "^6.1.0",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
