--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "@ngrx/store-devtools": "^10.1.2",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "amazing-time-picker": "^1.8.0",
     "chart.js": "^2.9.4",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "ng2-google-charts": "^6.1.0",
     "ngx-toastr": "^13.2.0",
