--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "amazing-time-picker": "^1.8.0",
     "chart.js": "^2.9.4",
     "jwt-decode": "^3.1.2",
-    "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "ng2-charts": "2.4.2",
     "ng2-google-charts": "^6.1.0",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.5.5",
@@ -77,6 +77,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "lodash": "^4.17.21",
     "ngx-translate-lint": "^1.14.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
